--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
+    "@paypal/react-paypal-js": "^8.9.2",
     "@tailwindcss/vite": "^4.1.17",
     "@types/jsonwebtoken": "^9.0.10",
     "axios": "^1.13.2",
@@ -19,11 +21,15 @@
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "jsonwebtoken": "^9.0.2",
+    "moment": "^2.30.1",
     "mysql2": "^3.15.3",
+    "qs": "^6.14.0",
+    "querystring": "^0.2.1",
     "react": "^19.2.0",
     "react-chartjs-2": "^5.3.1",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.9.6",
+    "react-toastify": "^11.0.5",
     "resend": "^6.5.2",
     "tailwindcss": "^4.1.17"
   },
